// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical persian/afghanistan IDX page A11y I can see the skip to content link 1`] = `"مشاهده محتوا"`;

exports[`Canonical persian/afghanistan IDX page Analytics ATI 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" src="https://logws1363.ati-host.net?s=598343&amp;s2=69&amp;p=persian.afghanistan.page&amp;x1=[urn%3Abbc%3Acps%3A3cda1d8c-ffa2-03ae-e050-380a4e8056f3]&amp;x2=[responsive]&amp;x3=[news-persian]&amp;x4=[fa]&amp;x7=[index-section]&amp;x8=[simorgh-nojs]&amp;x9=[%D8%B5%D9%81%D8%AD%D9%87%2520%D8%A7%D9%81%D8%BA%D8%A7%D9%86%D8%B3%D8%AA%D8%A7%D9%86%2520-%2520BBC%2520News%2520%D9%81%D8%A7%D8%B1%D8%B3%DB%8C]&amp;x11=[2016-09-20T16%3A06%3A44.000Z]&amp;x12=[2023-07-24T07%3A12%3A08.000Z]"/>"`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, فارسی",
  "url": "/persian",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 2`] = `
{
  "text": "چرا می‌توانید به بی‌بی‌سی اطمینان کنید؟",
  "url": "https://www.bbc.com/persian/institutional-49283091",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 3`] = `
{
  "text": "شرایط استفاده",
  "url": "https://www.bbc.com/persian/institutional-37474133",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 4`] = `
{
  "text": "درباره بی بی سی",
  "url": "https://www.bbc.com/persian/institutional-37474136",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 5`] = `
{
  "text": "سیاست حفظ حریم خصوصی",
  "url": "https://www.bbc.com/persian/institutional-37540067",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 6`] = `
{
  "text": "کوکی ها",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 7`] = `
{
  "text": "تماس با بی بی سی",
  "url": "https://www.bbc.co.uk/persian/send/u50853555",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer Anchors should match text and url 8`] = `
{
  "text": "سیاست ما درباره لینک دادن به سایت های دیگر.",
  "url": "https://www.bbc.com/persian/institutional/2011/04/000001_links",
}
`;

exports[`Canonical persian/afghanistan IDX page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/persian"`;

exports[`Canonical persian/afghanistan IDX page Footer I can see the footer copyright and external linking text 1`] = `"© 2023 بی بی سی. بی بی سی مسئول محتوای سایت های دیگر نیست. سیاست ما درباره لینک دادن به سایت های دیگر."`;

exports[`Canonical persian/afghanistan IDX page Header I can see the branding 1`] = `"BBC News, فارسی"`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 1`] = `
{
  "text": "صفحه اول",
  "url": "/persian",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 2`] = `
{
  "text": "جنگ اسرائیل-غزه",
  "url": "/persian/topics/clm0z4jgj3xt",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 3`] = `
{
  "text": "پخش زنده",
  "url": "/persian/media-49522521",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 4`] = `
{
  "text": "ویدیو",
  "url": "/persian/topics/c6z7mnr559gt",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 5`] = `
{
  "text": "تلویزیون",
  "url": "/persian/tv-and-radio-37434377",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 6`] = `
{
  "text": "ايران",
  "url": "/persian/topics/ckdxnwvwwjnt",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 7`] = `
{
  "text": "صفحه فعلی, افغانستان",
  "url": "/persian/afghanistan",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 8`] = `
{
  "text": "جهان",
  "url": "/persian/topics/c1d8ye58xl8t",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 9`] = `
{
  "text": "هنر",
  "url": "/persian/topics/c9wpm0epm45t",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 10`] = `
{
  "text": "ورزش",
  "url": "/persian/topics/cnq6879k7yjt",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 11`] = `
{
  "text": "اقتصاد",
  "url": "/persian/topics/cl8l9mvlllqt",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 12`] = `
{
  "text": "دانش",
  "url": "/persian/topics/ckdxnwr4r1yt",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 13`] = `
{
  "text": "ناظران می‌گویند",
  "url": "/persian/blogs-54099951",
}
`;

exports[`Canonical persian/afghanistan IDX page Header Navigation link should match text and url 14`] = `
{
  "text": "رادیو",
  "url": "/persian/tv-and-radio-37434376",
}
`;

exports[`Canonical persian/afghanistan IDX page Main heading should match text 1`] = `"صفحه افغانستان"`;

exports[`Canonical persian/afghanistan IDX page Most Read has item with rank 1`] = `
{
  "text": "خالق باربی: چرا بعضی مردها تصور عروسکی زنانه را نمی‌پسندیدند",
  "url": "https://www.bbc.com/persian/articles/ckdnj50k8pyo",
}
`;

exports[`Canonical persian/afghanistan IDX page Most Read has item with rank 2`] = `
{
  "text": "حمله افراد «مسلح» و با «لباس سپاه» به گردشگران در منطقه ییلاقی اوپرت: «سوم محرم، آمدید تفریح؟»",
  "url": "https://www.bbc.com/persian/articles/c72rq9d44ggo",
}
`;

exports[`Canonical persian/afghanistan IDX page Most Read has item with rank 3`] = `
{
  "text": "اصلاحات قضایی اسرائیل؛ نتانیاهو پیش از رای‌گیری کلیدی پارلمان بیمارستان را ترک کرد",
  "url": "https://www.bbc.com/persian/articles/c97pld3q4gro",
}
`;

exports[`Canonical persian/afghanistan IDX page Most Read has item with rank 4`] = `
{
  "text": "از لوگوی جدید توییتر رونمایی شد",
  "url": "https://www.bbc.com/persian/articles/c4n5mzgk871o",
}
`;

exports[`Canonical persian/afghanistan IDX page Most Read has item with rank 5`] = `
{
  "text": "روسیه، اوکراین را به «حمله پهپادی» به مسکو متهم کرد",
  "url": "https://www.bbc.com/persian/articles/c6pv6n8j2zjo",
}
`;

exports[`Canonical persian/afghanistan IDX page Most Read has item with rank 6`] = `
{
  "text": "۱۱ کشته در ریزش سقف سالن ورزشی در چین هنگام تمرین تیم والیبال دختران",
  "url": "https://www.bbc.com/persian/articles/cl7njq8g5y0o",
}
`;

exports[`Canonical persian/afghanistan IDX page Most Read has item with rank 7`] = `
{
  "text": "بلینکن: در شرایطی نیستیم که درباره بازگشت به برجام مذاکره کنیم",
  "url": "https://www.bbc.com/persian/articles/c89re8wz9y4o",
}
`;

exports[`Canonical persian/afghanistan IDX page Most Read has item with rank 8`] = `
{
  "text": "اوپنهایمر؛ روایتگر «ویرانگر دنیاها» و داستان ساخت اولین بمب اتمی  ",
  "url": "https://www.bbc.com/persian/articles/c3gdngql0p3o",
}
`;

exports[`Canonical persian/afghanistan IDX page Most Read has item with rank 9`] = `
{
  "text": "«ویرانگر دنیاها»؛ رابرت اوپنهایمر واقعی که بود؟",
  "url": "/persian/world-features-66255722",
}
`;

exports[`Canonical persian/afghanistan IDX page Most Read has item with rank 10`] = `
{
  "text": "انتخابات اسپانیا؛ محافظه‌کاران پیشتاز ولی فاقد اکثریت پارلمانی",
  "url": "https://www.bbc.com/persian/articles/cw915nrp4e9o",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/persian/images/icons/icon-192x192.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-72x72.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-96x96.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-128x128.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-144x144.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-152x152.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-180x180.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-192x192.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-384x384.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-512x512.png",
}
`;

exports[`Canonical persian/afghanistan IDX page SEO Canonical link 1`] = `"http://localhost:7080/persian/afghanistan"`;

exports[`Canonical persian/afghanistan IDX page SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical persian/afghanistan IDX page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical persian/afghanistan IDX page SEO Heading level 1 1`] = `"صفحه افغانستان"`;

exports[`Canonical persian/afghanistan IDX page SEO Lang attribute 1`] = `"fa"`;

exports[`Canonical persian/afghanistan IDX page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "fa",
        "name": "Persian",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/persian/afghanistan",
        "@type": "WebPage",
        "name": "صفحه افغانستان",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
          "width": 1024,
        },
        "name": "BBC News فارسی",
        "publishingPrinciples": "https://www.bbc.com/persian/institutional-49283091",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
      "url": "http://localhost:7080/persian/afghanistan",
    },
  ],
}
`;

exports[`Canonical persian/afghanistan IDX page SEO OG description 1`] = `"تازه ترین اخبار، گزارش ها و تحلیل ها درباره افغانستان؛ از سیاست، جامعه و مسائل امنیتی افغانستان گرفته تا گزارش های ویدیویی و برنامه های رادیو بی بی سی برای افغانستان."`;

exports[`Canonical persian/afghanistan IDX page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`Canonical persian/afghanistan IDX page SEO OG image alt 1`] = `"BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO OG locale 1`] = `"fa"`;

exports[`Canonical persian/afghanistan IDX page SEO OG site name 1`] = `"BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO OG title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO OG type 1`] = `"website"`;

exports[`Canonical persian/afghanistan IDX page SEO OG url 1`] = `"http://localhost:7080/persian/afghanistan"`;

exports[`Canonical persian/afghanistan IDX page SEO Page title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter creator 1`] = `"@bbcpersian"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter description 1`] = `"تازه ترین اخبار، گزارش ها و تحلیل ها درباره افغانستان؛ از سیاست، جامعه و مسائل امنیتی افغانستان گرفته تا گزارش های ویدیویی و برنامه های رادیو بی بی سی برای افغانستان."`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter image alt 1`] = `"BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter site 1`] = `"@bbcpersian"`;

exports[`Canonical persian/afghanistan IDX page SEO Twitter title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`Canonical persian/afghanistan IDX page Sections should match headline text 1`] = `"Top story - Afghanistan"`;

exports[`Canonical persian/afghanistan IDX page Sections should match headline text 2`] = `"تحلیل و گزارش"`;

exports[`Canonical persian/afghanistan IDX page Sections should match headline text 3`] = `"برنامه‌های رادیو"`;

exports[`Canonical persian/afghanistan IDX page Sections should match headline text 4`] = `"ویدیو"`;

exports[`Canonical persian/afghanistan IDX page Sections should match headline text 5`] = `"گوش کنید: تازه‌ترین برنامه‌های رادیوبیشتر"`;

exports[`Canonical persian/afghanistan IDX page Sections should match headline text 6`] = `"پربیننده‌ترین‌ها"`;

exports[`Canonical persian/afghanistan IDX page Story Promo Headline should match text 1`] = `"بارندگی‌ و سیلاب ده‌ها کشته و تخریب صدها خانه‌ مسکونی در میدان‌وردک به‌جا گذاشته است"`;

exports[`Canonical persian/afghanistan IDX page Story Promo Image should match image 1`] = `
<img
  alt="خانه‌های آسیب دیده از سیلاب در میدان وردک"
  class="bbc-1uwua2r"
  height="2304"
  sizes="(min-width: 1100px) 496px, (min-width: 600px) 45.83vw, 94.29vw"
  src="https://ichef.bbci.co.uk/news/660/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg"
  srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/10387/production/_130493466_5c460319-31fb-4d61-990d-e97c8239a4d1.jpg 660w"
  style="aspect-ratio:4096 / 2304"
  width="4096"
/>
`;
